Ensure sad tab is shown for all abnormal terminations.

WebView was calling WebContents::IsCrashed() to determine if the
crashed overlay view (sad tab) should be shown on top of the web
contents, but on Windows only, IsCrashed() was returning false for
a tab that was killed due to OOM.

It's not clear whether OOM should count as a crash or not or
whether there should be a platform difference. However, this bug
can be fixed safely either way. The real logic determining whether a
sad tab is shown or not happens in SadTabHelper. It's sufficient for
WebView to just check whether the WebContents has any abnormal
termination status, and show the crashed overlay view if so.

Bug: 817124
Change-Id: I7ba5f5f40e8d4499ec509b38471bbc1a1f8b6225
Reviewed-on: https://chromium-review.googlesource.com/993992
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548086}
Former-commit-id: ac00cdb55acf005d8aac4b862a3700187fb560b9